/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";

message CFE_SB_TlmHdr_t_pb
{
	required CCSDS_PriHdr_t_pb Pri = 1;
	required CCSDS_TlmSecHdr_t_pb Sec = 2;
}


message CCSDS_TlmSecHdr_t_pb
{
	repeated uint32 Time = 1;
}


message CCSDS_PriHdr_t_pb
{
	repeated uint32 Length = 1;
	repeated uint32 Sequence = 2;
	repeated uint32 StreamId = 3;
}


message CFE_SB_PrevSubMsg_Payload_t_pb
{
	repeated CFE_SB_SubEntries_t_pb Entry = 1;
	required uint32 PktSegment = 2;
	required uint32 TotalSegments = 3;
	required uint32 Entries = 4;
}


message CFE_SB_SubEntries_t_pb
{
	required string Pipe = 1;
	required uint32 MsgId = 2;
	required CFE_SB_Qos_t_pb Qos = 3;
}


message CFE_SB_Qos_t_pb
{
	required uint32 Priority = 1;
	required uint32 Reliability = 2;
}

message CFE_SB_PrevSubMsg_t_pb
{

	required CFE_SB_TlmHdr_t_pb Hdr = 1;
	required CFE_SB_PrevSubMsg_Payload_t_pb Payload = 2;
}