/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";
message MM_LoadMemFromFileCmd_t_pb
{

	repeated uint32 CmdHeader = 1;
	required string FileName = 2;
}